// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders 1`] = `
<nav
  className="sc-iTHKGG hDvpVL"
>
  <a
    className="sc-ftNBoD bOFCBA"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-dFQEdM sc-exPMgj eVBKm gJBCmr"
  >
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#2"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#4"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#5"
      >
        Future
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders HorizontalVariants 1`] = `
Array [
  <nav
    className="sc-iTHKGG hDvpVL"
  >
    <a
      className="sc-ftNBoD bOFCBA"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-dFQEdM sc-exPMgj eVBKm gJBCmr"
    >
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>,
  <nav
    className="sc-iTHKGG hDvpVL"
  >
    <a
      className="sc-ftNBoD bOFCBA"
      href="#nav-test-id-2"
    >
      Skip to content
    </a>
    <ul
      className="sc-dFQEdM sc-exPMgj eVBKm gJBCmr"
    >
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-kzupcl YFUPx"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-2"
    />
  </nav>,
  <nav
    className="sc-iTHKGG fQyAPR"
  >
    <a
      className="sc-ftNBoD bOFCBA"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-dFQEdM sc-exPMgj eVBKm lotgcd"
    >
      <li
        className="sc-kzupcl jVyGUI active"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-kzupcl jVyGUI"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-kzupcl jVyGUI"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-kzupcl jVyGUI"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-kzupcl jVyGUI"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-kzupcl jVyGUI"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-kzupcl jVyGUI"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>,
]
`;

exports[`Tabs renders Small 1`] = `
<nav
  className="sc-iTHKGG hDvpVL"
>
  <a
    className="sc-ftNBoD bOFCBA"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-dFQEdM sc-exPMgj eVBKm gJBCmr"
  >
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq lalHNq"
        href="#2"
        size="small"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq lalHNq"
        href="#3"
        size="small"
      >
        Today
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq lalHNq"
        href="#4"
        size="small"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq lalHNq"
        href="#5"
        size="small"
      >
        Future
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq lalHNq"
        href="#6"
        size="small"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq lalHNq"
        href="#7"
        size="small"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq lalHNq"
        href="#8"
        size="small"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders Variant 1`] = `
<nav
  className="sc-iTHKGG hDvpVL"
>
  <a
    className="sc-ftNBoD bOFCBA"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-dFQEdM sc-exPMgj eVBKm gJBCmr"
  >
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#2"
      >
        Featured
        <span
          className="sc-hsfgio fiNUoB"
        >
          00
        </span>
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#4"
      >
        <div
          className="sc-uoHVL pkvkW"
        >
          <svg
            className="sc-cLFqLo"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
              stroke="currentColor"
            />
          </svg>
        </div>
        Tomorrow
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#5"
      >
        <div
          className="sc-uoHVL pkvkW"
        >
          <svg
            className="sc-cLFqLo"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
              stroke="currentColor"
            />
          </svg>
        </div>
        Future
        <span
          className="sc-hsfgio fiNUoB"
        >
          00
        </span>
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-kzupcl YFUPx"
      onClick={[Function]}
    >
      <a
        className="sc-jPGeSq kPSsRn"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders VerticalVariants 1`] = `
<div
  className="flex flex-row justify-around items-end w-full gap-2"
>
  <nav
    className="sc-iTHKGG cnIUMT"
  >
    <a
      className="sc-ftNBoD bOFCBA"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-dFQEdM sc-exPMgj eVBKm gJBCmr"
    >
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq kPSsRn"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq kPSsRn"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq kPSsRn"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq kPSsRn"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq kPSsRn"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq kPSsRn"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq kPSsRn"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>
  <nav
    className="sc-iTHKGG gLHnwi"
  >
    <a
      className="sc-ftNBoD bOFCBA"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-dFQEdM sc-exPMgj eVBKm gJBCmr"
    >
      <li
        className="sc-kzupcl ktJvbj"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-kzupcl ktJvbj"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-kzupcl ktJvbj"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-kzupcl ktJvbj"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-kzupcl ktJvbj"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-kzupcl ktJvbj"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-kzupcl ktJvbj"
        onClick={[Function]}
      >
        <a
          className="sc-jPGeSq IOvHK"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>
  <nav
    className="sc-iTHKGG cnIUMT"
  >
    <a
      className="sc-ftNBoD bOFCBA"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-dFQEdM sc-exPMgj eVBKm gJBCmr"
    >
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-kzupcl bHvzIv"
        onClick={[Function]}
      >
        <a
          className="sc-jmjsKF kBqxWY tab-link-fill"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>
</div>
`;
